@@ -2,8 +2,15 @@ description = 'Extension for aerogel supporting automatic binding creation compi
 
 dependencies {
   implementation rootProject
+  testImplementation group: 'com.squareup', name: 'javapoet', version: '1.13.0'
+  testImplementation group: 'com.google.testing.compile', name: 'compile-testing', version: '0.19'
 }
 
 test {
   dependsOn ':shadowJar'
+  doFirst {
+    jvmArgs = [
+      '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'
+    ]
+  }
 }
